kubernetes/db/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
        - name: sql
          image: kw2000/aline-db
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-pvc
          ports:
            - containerPort: 3306
      volumes:
        - name: db-pvc
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: sql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: microservice
    ports:
      - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 31000
